--- a/app/src/main/res/layout/activity_student_list.xml
+++ b/app/src/main/res/layout/activity_student_list.xml
@@ -28,6 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <ListView
+        android:id="@+id/StudListView"
         android:layout_width="346dp"
         android:layout_height="503dp"
         android:layout_marginStart="16dp"
