--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -8,14 +8,11 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="178dp"
-        android:layout_height="208dp"
+        android:layout_width="331dp"
+        android:layout_height="442dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499"
-        app:srcCompat="?android:attr/textSelectHandle"
-        tools:srcCompat="?android:attr/textSelectHandle" />
+        app:srcCompat="@mipmap/logo_foreground" />
 </androidx.constraintlayout.widget.ConstraintLayout>
